crates/toml/tests/snapshots/invalid/float/us-after-dot.stderr
TOML parse error at line 1, column 18
  |
1 | us-after-dot = 1._2
  |                  ^
`_` may only go between digits
